--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <div class="col-md-8 bg-white">
                 <h1 id="title" class="mt-3 mb-1 font-weight-bold">About Me</h1>
                 <hr class="mt-0">
-                <img class="pull-left" src="assets/images/profile.png" alt="profile picture" height="250px" width="250px">
+                <img class="mr-3 mb-1" src="assets/images/profile.png" alt="profile picture" height="250px" width="250px">
                 <p>
                     Lover of languages and logic, I studied math, computer science, philosophy, French, and Wolof at UW-Madison. Since then,
                     I worked for the past 4 years as a Technical Services Engineer, focused on finding root causes to technical
